# testEthercat

./: .gitignore
testEC1/: CMakeLists.txt  kecm.cpp  kecm.h  main.cpp
